manifests/muenster-dashboard/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # annotations:
  #   flux.weave.works/automated: "true"
  #   flux.weave.works/tag.dashboard: glob:0.*
  name: muenster-dashboard
  namespace: muenster-dashboard
  labels:
    app: muenster-dashboard
spec:
  template:
    metadata:
      labels:
        app: muenster-dashboard
    spec:
      containers:
      - name: muenster-dashboard
        image: quay.io/codeformuenster/muenster-dashboard:0.4.0-rc1
        imagePullPolicy: IfNotPresent
        ports:
        - name: ui
          containerPort: 8080
