manifests/muenster-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muenster-dashboard
  namespace: muenster-dashboard
  labels:
    app: muenster-dashboard
spec:
  ports:
  - name: ui
    port: 8080
    targetPort: ui
  selector:
    app: muenster-dashboard
