manifests/muenster-dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: muenster-dashboard
  namespace: muenster-dashboard
  labels:
    app: muenster-dashboard
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: muenster-dashboard.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: muenster-dashboard
          servicePort: ui
        path: /
  # - host: dashboard-codeformuenster.org
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /stadtviertel
  # - host: dashboard-codeformuenster.org
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /copyright
  # - host: dashboard-codeformuenster.org
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /impressum
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /stadtviertel
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /copyright
  # - host: mein-ms.de
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: dashboard
  #         servicePort: ui
  #       path: /impressum
  tls:
  - hosts:
    - muenster-dashboard.codeformuenster.org
    # - mein-ms.de
    # - www.mein-ms.de
    secretName: muenster-dashboard-tls
